Wed Jun 22 11:09:22 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/remote_protocol.rst: Fixed typo which reversed the intended
	  sense.

Wed Jun 22 11:05:51 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Add unnecessary AC_LANG_SOURCE wrapper to shut up
	  autoconf warning.

Wed Jun 22 10:57:55 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/Makefile.am,tests/perftest/Makefile.mk,
	  tests/soaktest/Makefile.mk: Make the generated "*_all.h" depend on
	  the Makefile.am or Makefile.mk which contains the list of files it
	  is generated from so that it gets regenerated when a file is
	  removed from that list.

Wed Jun 22 10:27:51 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/omenquireinternal.h: Remove a FIXME - caching the Document
	  object in MSetItem isn't a replacement for storing the sort_key
	  now that sort_keys can be computed.

Wed Jun 22 10:20:04 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/admin_notes.rst: Add note about xapian-chert-update.

Wed Jun 22 10:14:14 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* bin/Makefile.mk: Remove lingering reference to quartz (rules to
	  generate man pages for quartzdump, etc).

Sun Jun 12 11:54:45 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Final update for 1.2.6.

Sat Jun 11 10:11:23 GMT 2011  Olly Betts <olly@survex.com>

	* api/omdocument.cc: Update LOGCALL(MATCH, ...) to LOGCALL(DB, ...).
	  Convert LOGLINE() at start of method to LOGCALL().

Sat Jun 11 09:57:00 GMT 2011  Olly Betts <olly@survex.com>

	* api/omdatabase.cc: Remove self-assignment check from
	  Database::operator= since this is an uncommon code path and
	  RefCntPtr ensures that self-assignment of the internals is
	  safe.

Sat Jun 11 08:48:10 GMT 2011  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,backends/brass/brass_cursor.h,